@@ -19,6 +19,18 @@ test_that("as.Node.data.frame", {
 })
 
 
+test_that("FromDataFrameTable no extra column", {
+  
+  pathString <- c("a/b/c/d", "a/b/c/e", "a/f")
+
+  
+  df <- data.frame(pathString)
+  tree <- FromDataFrameTable(df)
+
+  expect_equal(Get(tree$leaves, "name"), c(d = "d", e = "e", f = "f"))
+  
+})
+
 
 test_that("FromDataFrameTable reserved words", {
 
